@@ -59,7 +59,7 @@ class RepOrderServiceTest {
     private RepOrderCPDataRepository repOrderCPDataRepository;
 
     @BeforeEach
-    public void setup() {
+    void setup() {
         repOrderMapper = Mappers.getMapper(RepOrderMapper.class);
         repOrderService = new RepOrderService(repOrderImpl,
                 repOrderMapper,
@@ -115,17 +115,10 @@ class RepOrderServiceTest {
     }
 
     @Test
-    void givenAValidRepIdAndNoSentenceOrderDate_whenCountByIdIsInvoked_thenReturnFalse() {
-        when(repOrderImpl.countById(any()))
-                .thenReturn(0L);
-        assertThat(repOrderService.exists(TestModelDataBuilder.REP_ID, Boolean.FALSE)).isFalse();
-    }
-
-    @Test
-    void givenValidRepIdAndHasSentenceOrderDate_whenCountByIdIsInvoked_thenReturnTrue() {
-        when(repOrderImpl.countWithSentenceOrderDate(any()))
-                .thenReturn(1L);
-        assertThat(repOrderService.exists(TestModelDataBuilder.REP_ID, Boolean.TRUE)).isTrue();
+    void givenAValidRepIdAndNoSentenceOrderDate_whenExistsIsInvoked_thenReturnFalse() {
+        when(repOrderImpl.exists(any()))
+                .thenReturn(false);
+        assertThat(repOrderService.exists(TestModelDataBuilder.REP_ID)).isFalse();
     }
 
     @Test
@@ -189,19 +182,19 @@ class RepOrderServiceTest {
 
     @Test
     void givenAInvalidRequest_whenSearchMaatApplicationIsInvoked_thenRequestedObjectNotFoundExceptionIsThrown() {
-
-        when(repOrderRepository.findRepId(any(MaatSearchRequest.class))).thenReturn(Collections.EMPTY_SET);
+        var request = TestModelDataBuilder.getMaatSearchRequest();
+        when(repOrderRepository.findRepId(any(MaatSearchRequest.class))).thenReturn(Collections.emptySet());
         RequestedObjectNotFoundException expectedException = assertThrows(RequestedObjectNotFoundException.class,
-                () -> repOrderService.searchMaatApplication(TestModelDataBuilder.getMaatSearchRequest()));
+                () -> repOrderService.searchMaatApplication(request));
         assertEquals("Representation order not found", expectedException.getMessage());
     }
 
     @Test
     void givenAInvalidRequestAndMissingRepOrder_whenSearchMaatApplicationIsInvoked_thenRequestedObjectNotFoundExceptionIsThrown() {
-
+        var request = TestModelDataBuilder.getMaatSearchRequest();
         when(repOrderRepository.findRepId(any(MaatSearchRequest.class))).thenReturn(null);
         RequestedObjectNotFoundException expectedException = assertThrows(RequestedObjectNotFoundException.class,
-                () -> repOrderService.searchMaatApplication(TestModelDataBuilder.getMaatSearchRequest()));
+                () -> repOrderService.searchMaatApplication(request));
         assertEquals("Representation order not found", expectedException.getMessage());
     }
 
@@ -245,7 +238,7 @@ class RepOrderServiceTest {
             TestModelDataBuilder.getMaatSearchRequest());
 
         assertEquals(1, maatSearchResponseList.size());
-        MaatSearchResponse response = maatSearchResponseList.get(0);
+        MaatSearchResponse response = maatSearchResponseList.getFirst();
         assertEquals(repOrder.getCaseUrn(), response.getLinkingDetail().getCaseUrn());
     }
 
